@@ -308,6 +308,8 @@ def disable_test_log((test_log_hdlr, old_trace_file, old_trace_depth)):
 
 
 def report_exception(exc_info, err_file):
+    """Report an exception to err_file (typically stderr) and to .bzr.log.
+    """
     exc_type, exc_object, exc_tb = exc_info
     # Log the full traceback to ~/.bzr.log
     log_exception_quietly()
